# -2

./: .gitignore  BUSINESS_SCENARIOS.md  README.md
.github/workflows/: codex-publish-patch.yml
GeoShturman/: README.md  README_DEPLOY_BEGET.md  docker-compose.yml
GeoShturman/backend/: Dockerfile  requirements.txt
GeoShturman/backend/app/: config.py  main.py
GeoShturman/backend/scripts/: run_core_demo.py
GeoShturman/backend/tests/: test_api_demo.py  test_api_health.py  test_artifacts.py  test_autonomous_navigation_demo.py  test_correlation.py  test_dead_reckoning.py  test_dorabotka_api.py  test_geodesy.py  test_navigation_core.py  test_nmea.py  test_nmea_endpoint.py  test_particle_filter_initialization.py  test_particle_prediction.py  (+2 more)
GeoShturman/nginx/: nginx.conf
docs/: dorabotka.md
independent_test/: README.md  geonav_cli.py  independent_harness.py  test_consistency.py  test_pipeline_e2e.py
tercom_uav/: .gitignore  README.md  pyproject.toml  ОТЧЕТ_О_ПРАВКАХ.txt
tercom_uav/docs/: CHANGELOG_DEV.txt
tercom_uav/examples/: demo_config.yaml
tercom_uav/src/tercom_uav/: __init__.py  cli.py  confidence.py  config.py  correlation.py  dem.py  dorabotka.py  estimator.py  gps.py  kalman.py  mavlink_stub.py  nmea.py  profiles.py  route_planning.py  simulator.py  types.py  visualization.py  webapp.py
tercom_uav/src/tercom_uav/web/static/: app.js  index.html  styles.css
tercom_uav/tests/: test_correlation.py  test_dem.py  test_dorabotka.py  test_estimator.py  test_gps_fusion.py  test_nmea.py  test_profiles.py  test_route_planning.py  test_webapp.py
(+30 files in other folders)
