[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tercom-uav"
version = "0.1.0"
description = "Production-style prototype of terrain-referenced navigation for UAV radio-altimeter streams."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hackathon Prototype" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "rasterio>=1.3",
  "pyproj>=3.5",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "typer>=0.9",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
tercom-uav = "tercom_uav.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tercom_uav = ["web/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
